--- a/package.json
+++ b/package.json
@@ -20,7 +20,13 @@
         "vue": "^2.5.7"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^1.2.2",
+        "@fortawesome/free-solid-svg-icons": "^5.2.0",
+        "@fortawesome/vue-fontawesome": "^0.1.1",
         "bulma": "^0.7.1",
-        "vue-router": "^3.0.1"
+        "i": "^0.3.6",
+        "npm": "^6.2.0",
+        "vue-router": "^3.0.1",
+        "vuex": "^3.0.1"
     }
 }
