--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
         "axios": "^0.18.0",
         "bulma": "^0.7.1",
         "i": "^0.3.6",
+        "laravel-echo": "^1.4.0",
         "npm": "^6.2.0",
-        "vue-router": "^3.0.1",
+        "pusher-js": "^4.2.2",
+        "vue-chat-scroll": "^1.3.3",
         "vuex": "^3.0.1"
     }
 }
