--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "bulma": "^0.7.1",
         "i": "^0.3.6",
         "laravel-echo": "^1.4.0",
+        "noty": "^3.2.0-beta",
         "npm": "^6.2.0",
         "pusher-js": "^4.2.2",
         "vue-chat-scroll": "^1.3.3",
